[package]
name = "udp-gui-rust"
description = "Testing UDP and GUI written in Rust"
version = "0.1.0"
edition = "2018"
authors = ["Alex Black <wa7@sa34.cx>"]
license = "MIT"
repository = "https://github.com/wa7sa34cx/udp-gui-rust"
keywords = ["udp", "gui", "sqlite", "sqlx"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "udp_gui_rust"

[dependencies]
anyhow = "1.0"